# nexus

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: AGENTS.md
.github/workflows/: AGENTS.md  ci.yml
.kiro/: AGENTS.md
.kiro/steering/: AGENTS.md  product.md  structure.md  tech.md
docs/: AGENTS.md  JOURNEY.md
nexus-a2a/: .dockerignore  AGENTS.md  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  pyproject.toml  requirements.txt  server.py
nexus-a2a/tests/: AGENTS.md  test_server.py
nexus-common/: AGENTS.md  README.md  pyproject.toml
nexus-common/nexus_common/: AGENTS.md  __init__.py  auth.py  service.py  telemetry.py
nexus-dev-infra/: AGENTS.md  README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
nexus-dev-infra/grafana/: AGENTS.md
nexus-dev-infra/grafana/dashboards/: AGENTS.md  nexus-overview.json  tempo-health.json
nexus-dev-infra/grafana/provisioning/: AGENTS.md
nexus-dev-infra/grafana/provisioning/dashboards/: AGENTS.md  nexus.yml
nexus-dev-infra/grafana/provisioning/datasources/: AGENTS.md  datasources.yml
nexus-integration/: AGENTS.md  CHANGELOG.md  README.md  test_a2a_integration.py  test_persistence_integration.py  test_routing_integration.py
nexus-mcp/: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  database.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
nexus-mcp/alembic/: AGENTS.md  env.py
nexus-mcp/alembic/versions/: 668e2bd0edd6_initial_migration.py  AGENTS.md
nexus-mcp/tests/: AGENTS.md  test_server.py
nexus-orchestrator/: .dockerignore  AGENTS.md  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  main.py  pyproject.toml  requirements.txt
nexus-orchestrator/orchestrator/: AGENTS.md  app.py  asgi.py  cli.py  config.py  eval_cases.py  middleware.py  reviewer.py  server.py  tools.py
nexus-orchestrator/orchestrator/adapters/: AGENTS.md  __init__.py  bedrock_adapter.py  ollama_adapter.py
nexus-orchestrator/orchestrator/agents/: AGENTS.md  core_agents.py  dynamic_agents.py
nexus-orchestrator/orchestrator/persistence/: AGENTS.md  database_services.py  postgres_services.py  redis_services.py
nexus-orchestrator/orchestrator/registry/: AGENTS.md  agent_registry.py
nexus-orchestrator/tests/: AGENTS.md  conftest.py  test_a2a_discovery.py  test_database_session_service.py  test_initialization.py  test_ollama_adapter.py  test_orchestrator.py  test_postgres_services.py  test_redis_services.py  test_reviewer_enforcement.py  test_reviewer_wiring.py  test_server.py  test_tools.py
nexus-stack/: .env.example  .gitignore  .semgrep.yaml  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  GEMINI.md  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
nexus-stack/scripts/: AGENTS.md  demo.sh  doctor.sh  new-agent.sh
nexus-stack/templates/: AGENTS.md
nexus-stack/templates/a2a-service/: AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  server.py
nexus-stack/templates/a2a-service/tests/: AGENTS.md  test_server.py
nexus-ui/: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  GEMINI.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
nexus-ui/coverage/: clover.xml  coverage-final.json  index.html
nexus-ui/coverage/src/: App.tsx.html  index.html
nexus-ui/coverage/src/components/: ChatHeader.tsx.html  MessageInput.tsx.html  MessageList.tsx.html  SystemStatusGrid.tsx.html  index.html
nexus-ui/coverage/src/components/ui/: Badge.tsx.html  Button.tsx.html  Card.tsx.html  Input.tsx.html  index.html  index.ts.html
nexus-ui/coverage/src/lib/: index.html  utils.ts.html
nexus-ui/e2e/: AGENTS.md  chat.spec.ts
nexus-ui/public/: AGENTS.md
nexus-ui/src/: AGENTS.md  App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts  telemetry.ts  types.ts
nexus-ui/src/components/: AGENTS.md  ChatHeader.test.tsx  ChatHeader.tsx  MessageInput.test.tsx  MessageInput.tsx  MessageList.test.tsx  MessageList.tsx  SystemStatusGrid.test.tsx  SystemStatusGrid.tsx  TraceLink.test.tsx  TraceLink.tsx  WeatherWidget.tsx
nexus-ui/src/components/ui/: AGENTS.md  Badge.test.tsx  Badge.tsx  Button.test.tsx  Button.tsx  Card.test.tsx  Card.tsx  Input.test.tsx  Input.tsx  index.test.tsx  index.ts
nexus-ui/src/lib/: AGENTS.md  trace.test.ts  trace.ts  utils.test.ts  utils.ts
