[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-common"
version = "0.1.0"
description = "Shared utilities for the Nexus Multi-Agent Lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-prometheus",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-starlette",
    "prometheus_client",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_common*"]
