[project]
name = "nexus-mcp"
version = "0.1.0"
description = "HR-directory MCP server for the Nexus Multi-Agent Lab"
requires-python = ">=3.14"
dependencies = [
    "mcp[sse]",
    "uvicorn",
    "starlette",
    "sqlmodel",
    "alembic",
    "psycopg2-binary",
    "nexus-common",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "httpx",
]

# This is an application, not a library: nothing imports "nexus_mcp", so uv
# manages its dependencies without building/installing the project itself.
[tool.uv]
package = false

[tool.uv.sources]
nexus-common = { workspace = true }

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "S",   # bandit
    "PTH", # use pathlib
    "TRY", # tryceratops
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
pythonpath = "."

[tool.mypy]
strict = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
