[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestration-lab"
version = "0.1.0"
description = "A multi-agent system using Google ADK"
readme = "README.md"
requires-python = ">=3.14"

[tool.pytest.ini_options]
testpaths = ["projects"]
asyncio_mode = "strict"
pythonpath = ["projects/orchestrator"]
